--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             
             <ul class="navbar">
                 <li>
-                    <a href="#home">Home</a>
+                    <a href="https://github.com/imabhishek23/Travel-Website.git">Home</a>
                     <a href="#locations">Locations</a>
                     <a href="#package">Packages</a>
                     <a href="./about.html">About Us</a>
